tests/fail/fail_compound_assignment_molda.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "Ana", idadi: 60};
    pessoa += Pessoa::{nomi: "Maria", idadi: 61};
}
